コンポーネント追加。

--- a/give-test-1.21.7.html
+++ b/give-test-1.21.7.html
@@ -524,6 +524,110 @@
             <th>デバッグ棒のデータ</th>
             <td><input class="command-input" type="text" name="debug_stick_state" value="" placeholder="未設定" onchange="makeCommand()"></td>
         </tr>
+        <tr>
+            <th>盾の機能（blocks_attacks）</th>
+            <td><input class="command-input" type="text" name="blocks_attacks" value="" placeholder="未設定" onchange="makeCommand()"></td>
+        </tr>
+        <tr>
+            <th>ダメージ耐性（damage_resistant）</th>
+            <td><input class="command-input" type="text" name="damage_resistant" value="" placeholder="未設定" onchange="makeCommand()"></td>
+        </tr>
+        <tr>
+            <th>耐死効果（death_protection）</th>
+            <td><input class="command-input" type="text" name="death_protection" value="" placeholder="未設定" onchange="makeCommand()"></td>
+        </tr>
+        <tr>
+            <th>エンチャント可否（enchantable）</th>
+            <td><input class="command-input" type="text" name="enchantable" value="" placeholder="未設定" onchange="makeCommand()"></td>
+        </tr>
+        <tr>
+            <th>エンティティデータ（entity_data）</th>
+            <td><input class="command-input" type="text" name="entity_data" value="" placeholder="未設定" onchange="makeCommand()"></td>
+        </tr>
+        <tr>
+            <th>装備データ（equippable）</th>
+            <td><input class="command-input" type="text" name="equippable" value="" placeholder="未設定" onchange="makeCommand()"></td>
+        </tr>
+        <tr>
+            <th>ロケット花火のデータ（fireworks）</th>
+            <td><input class="command-input" type="text" name="fireworks" value="" placeholder="未設定" onchange="makeCommand()"></td>
+        </tr>
+        <tr>
+            <th>花火のデータ（firework_explosion）</th>
+            <td><input class="command-input" type="text" name="firework_explosion" value="" placeholder="未設定" onchange="makeCommand()"></td>
+        </tr>
+        <tr>
+            <th>アイテムモデル（item_model）</th>
+            <td><input class="command-input" type="text" name="item_model" value="" placeholder="未設定" onchange="makeCommand()"></td>
+        </tr>
+        <tr>
+            <th>収納ブロックのカギ（lock）</th>
+            <td><input class="command-input" type="text" name="lock" value="" placeholder="未設定" onchange="makeCommand()"></td>
+        </tr>
+        <tr>
+            <th>地図のアイコンリスト（map_decorations）</th>
+            <td><input class="command-input" type="text" name="map_decorations" value="" placeholder="未設定" onchange="makeCommand()"></td>
+        </tr>
+        <tr>
+            <th>地図の番号（map_id）</th>
+            <td><input class="command-input" type="text" name="map_id" value="" placeholder="未設定" onchange="makeCommand()"></td>
+        </tr>
+        <tr>
+            <th>頭のサウンド（note_block_sound）</th>
+            <td><input class="command-input" type="text" name="note_block_sound" value="" placeholder="未設定" onchange="makeCommand()"></td>
+        </tr>
+        <tr>
+            <th>頭のスキン（profile）</th>
+            <td><input class="command-input" type="text" name="profile" value="" placeholder="未設定" onchange="makeCommand()"></td>
+        </tr>
+        <tr>
+            <th>旗の模様素材付与（provides_banner_patterns）</th>
+            <td><input class="command-input" type="text" name="provides_banner_patterns" value="" placeholder="未設定" onchange="makeCommand()"></td>
+        </tr>
+        <tr>
+            <th>鍛冶素材付与（provides_trim_material）</th>
+            <td><input class="command-input" type="text" name="provides_trim_material" value="" placeholder="未設定" onchange="makeCommand()"></td>
+        </tr>
+        <tr>
+            <th>解放レシピ（recipes）</th>
+            <td><input class="command-input" type="text" name="recipes" value="" placeholder="未設定" onchange="makeCommand()"></td>
+        </tr>
+        <tr>
+            <th>金床素材付与（repairable）</th>
+            <td><input class="command-input" type="text" name="repairable" value="" placeholder="未設定" onchange="makeCommand()"></td>
+        </tr>
+        <tr>
+            <th>怪しげなシチューの効果（suspicious_stew_effects）</th>
+            <td><input class="command-input" type="text" name="suspicious_stew_effects" value="" placeholder="未設定" onchange="makeCommand()"></td>
+        </tr>
+        <tr>
+            <th>ツールとしての設定（tool）</th>
+            <td><input class="command-input" type="text" name="tool" value="" placeholder="未設定" onchange="makeCommand()"></td>
+        </tr>
+        <tr>
+            <th>ツールチップの背景（tooltip_style）</th>
+            <td><input class="command-input" type="text" name="tooltip_style" value="" placeholder="未設定" onchange="makeCommand()"></td>
+        </tr>
+        <tr>
+            <th>クールダウン設定（use_cooldown）</th>
+            <td><input class="command-input" type="text" name="use_cooldown" value="" placeholder="未設定" onchange="makeCommand()"></td>
+        </tr>
+        <tr>
+            <th>使用後のアイテム（use_remainder）</th>
+            <td><input class="command-input" type="text" name="use_remainder" value="" placeholder="未設定" onchange="makeCommand()"></td>
+        </tr>
+        <tr>
+            <th>武器としての設定（weapon）</th>
+            <td><input class="command-input" type="text" name="weapon" value="" placeholder="未設定" onchange="makeCommand()"></td>
+        </tr>
+        <tr>
+            <th>本と羽根ペンのデータ（writable_book_content）</th>
+            <td><input class="command-input" type="text" name="writable_book_content" value="" placeholder="未設定" onchange="makeCommand()"></td>
+        </tr>
+        <tr>
+            <th>記入済みの本のデータ（written_book_content）</th>
+            <td><input class="command-input" type="text" name="written_book_content" value="" placeholder="未設定" onchange="makeCommand()"></td>
+        </tr>
     </table>
 
     <br clear="all">
@@ -575,6 +679,33 @@ function makeCommand(){
     var component_container_loot = set_container_loot(form);
     var component_custom_model_data = set_custom_model_data(form);
     var component_debug_stick_state = set_debug_stick_state(form);
+
+    var component_blocks_attacks = set_blocks_attacks(form);
+    var component_damage_resistant = set_damage_resistant(form);
+    var component_death_protection = set_death_protection(form);
+    var component_enchantable = set_enchantable(form);
+    var component_entity_data = set_entity_data(form);
+    var component_equippable = set_equippable(form);
+    var component_fireworks = set_fireworks(form);
+    var component_firework_explosion = set_firework_explosion(form);
+    var component_item_model = set_item_model(form);
+    var component_lock = set_lock(form);
+    var component_map_decorations = set_map_decorations(form);
+    var component_map_id = set_map_id(form);
+    var component_note_block_sound = set_note_block_sound(form);
+    var component_profile = set_profile(form);
+    var component_provides_banner_patterns = set_provides_banner_patterns(form);
+    var component_provides_trim_material = set_provides_trim_material(form);
+    var component_recipes = set_recipes(form);
+    var component_repairable = set_repairable(form);
+    var component_suspicious_stew_effects = set_suspicious_stew_effects(form);
+    var component_tool = set_tool(form);
+    var component_tooltip_style = set_tooltip_style(form);
+    var component_use_cooldown = set_use_cooldown(form);
+    var component_use_remainder = set_use_remainder(form);
+    var component_weapon = set_weapon(form);
+    var component_writable_book_content = set_writable_book_content(form);
+    var component_written_book_content = set_written_book_content(form);
 
     var components = [];
     if(component_custom_name !== ''){
@@ -630,6 +761,85 @@ function makeCommand(){
     }
     if(component_debug_stick_state !== ''){
         components.push(component_debug_stick_state);
+    }
+
+    if(component_blocks_attacks !== ''){
+        components.push(component_blocks_attacks);
+    }
+    if(component_damage_resistant !== ''){
+        components.push(component_damage_resistant);
+    }
+    if(component_death_protection !== ''){
+        components.push(component_death_protection);
+    }
+    if(component_enchantable !== ''){
+        components.push(component_enchantable);
+    }
+    if(component_entity_data !== ''){
+        components.push(component_entity_data);
+    }
+    if(component_equippable !== ''){
+        components.push(component_equippable);
+    }
+    if(component_fireworks !== ''){
+        components.push(component_fireworks);
+    }
+    if(component_firework_explosion !== ''){
+        components.push(component_firework_explosion);
+    }
+    if(component_item_model !== ''){
+        components.push(component_item_model);
+    }
+    if(component_lock !== ''){
+        components.push(component_lock);
+    }
+    if(component_map_decorations !== ''){
+        components.push(component_map_decorations);
+    }
+    if(component_map_id !== ''){
+        components.push(component_map_id);
+    }
+    if(component_note_block_sound !== ''){
+        components.push(component_note_block_sound);
+    }
+    if(component_profile !== ''){
+        components.push(component_profile);
+    }
+    if(component_provides_banner_patterns !== ''){
+        components.push(component_provides_banner_patterns);
+    }
+    if(component_provides_trim_material !== ''){
+        components.push(component_provides_trim_material);
+    }
+    if(component_recipes !== ''){
+        components.push(component_recipes);
+    }
+    if(component_repairable !== ''){
+        components.push(component_repairable);
+    }
+    if(component_suspicious_stew_effects !== ''){
+        components.push(component_suspicious_stew_effects);
+    }
+    if(component_tool !== ''){
+        components.push(component_tool);
+    }
+    if(component_tooltip_style !== ''){
+        components.push(component_tooltip_style);
+    }
+    if(component_use_cooldown !== ''){
+        components.push(component_use_cooldown);
+    }
+    if(component_use_remainder !== ''){
+        components.push(component_use_remainder);
+    }
+    if(component_weapon !== ''){
+        components.push(component_weapon);
+    }
+    if(component_writable_book_content !== ''){
+        components.push(component_writable_book_content);
+    }
+    if(component_written_book_content !== ''){
+        components.push(component_written_book_content);
     }
 
     //giveコマンド生成ツール
