コンポーネント追加。

--- a/give-test-1.21.7.html
+++ b/give-test-1.21.7.html
@@ -525,107 +525,107 @@
             <td><input class="command-input" type="text" name="debug_stick_state" value="" placeholder="未設定" onchange="makeCommand()"></td>
         </tr>
         <tr>
-            <th>盾の機能（blocks_attacks）</th>
+            <th>盾の機能</th>
             <td><input class="command-input" type="text" name="blocks_attacks" value="" placeholder="未設定" onchange="makeCommand()"></td>
         </tr>
         <tr>
-            <th>ダメージ耐性（damage_resistant）</th>
+            <th>ダメージ耐性</th>
             <td><input class="command-input" type="text" name="damage_resistant" value="" placeholder="未設定" onchange="makeCommand()"></td>
         </tr>
         <tr>
-            <th>耐死効果（death_protection）</th>
+            <th>耐死効果</th>
             <td><input class="command-input" type="text" name="death_protection" value="" placeholder="未設定" onchange="makeCommand()"></td>
         </tr>
         <tr>
-            <th>エンチャント可否（enchantable）</th>
+            <th>エンチャント可否</th>
             <td><input class="command-input" type="text" name="enchantable" value="" placeholder="未設定" onchange="makeCommand()"></td>
         </tr>
         <tr>
-            <th>エンティティデータ（entity_data）</th>
+            <th>エンティティデータ</th>
             <td><input class="command-input" type="text" name="entity_data" value="" placeholder="未設定" onchange="makeCommand()"></td>
         </tr>
         <tr>
-            <th>装備データ（equippable）</th>
+            <th>装備データ</th>
             <td><input class="command-input" type="text" name="equippable" value="" placeholder="未設定" onchange="makeCommand()"></td>
         </tr>
         <tr>
-            <th>ロケット花火のデータ（fireworks）</th>
+            <th>ロケット花火のデータ</th>
             <td><input class="command-input" type="text" name="fireworks" value="" placeholder="未設定" onchange="makeCommand()"></td>
         </tr>
         <tr>
-            <th>花火のデータ（firework_explosion）</th>
+            <th>花火のデータ</th>
             <td><input class="command-input" type="text" name="firework_explosion" value="" placeholder="未設定" onchange="makeCommand()"></td>
         </tr>
         <tr>
-            <th>アイテムモデル（item_model）</th>
+            <th>アイテムモデル</th>
             <td><input class="command-input" type="text" name="item_model" value="" placeholder="未設定" onchange="makeCommand()"></td>
         </tr>
         <tr>
-            <th>収納ブロックのカギ（lock）</th>
+            <th>収納ブロックのカギ</th>
             <td><input class="command-input" type="text" name="lock" value="" placeholder="未設定" onchange="makeCommand()"></td>
         </tr>
         <tr>
-            <th>地図のアイコンリスト（map_decorations）</th>
+            <th>地図のアイコンリスト</th>
             <td><input class="command-input" type="text" name="map_decorations" value="" placeholder="未設定" onchange="makeCommand()"></td>
         </tr>
         <tr>
-            <th>地図の番号（map_id）</th>
+            <th>地図の番号</th>
             <td><input class="command-input" type="text" name="map_id" value="" placeholder="未設定" onchange="makeCommand()"></td>
         </tr>
         <tr>
-            <th>頭のサウンド（note_block_sound）</th>
+            <th>頭のサウンド</th>
             <td><input class="command-input" type="text" name="note_block_sound" value="" placeholder="未設定" onchange="makeCommand()"></td>
         </tr>
         <tr>
-            <th>頭のスキン（profile）</th>
+            <th>頭のスキン</th>
             <td><input class="command-input" type="text" name="profile" value="" placeholder="未設定" onchange="makeCommand()"></td>
         </tr>
         <tr>
-            <th>旗の模様素材付与（provides_banner_patterns）</th>
+            <th>旗の模様素材付与</th>
             <td><input class="command-input" type="text" name="provides_banner_patterns" value="" placeholder="未設定" onchange="makeCommand()"></td>
         </tr>
         <tr>
-            <th>鍛冶素材付与（provides_trim_material）</th>
+            <th>鍛冶素材付与</th>
             <td><input class="command-input" type="text" name="provides_trim_material" value="" placeholder="未設定" onchange="makeCommand()"></td>
         </tr>
         <tr>
-            <th>解放レシピ（recipes）</th>
+            <th>解放レシピ</th>
             <td><input class="command-input" type="text" name="recipes" value="" placeholder="未設定" onchange="makeCommand()"></td>
         </tr>
         <tr>
-            <th>金床素材付与（repairable）</th>
+            <th>金床素材付与</th>
             <td><input class="command-input" type="text" name="repairable" value="" placeholder="未設定" onchange="makeCommand()"></td>
         </tr>
         <tr>
-            <th>怪しげなシチューの効果（suspicious_stew_effects）</th>
+            <th>怪しげなシチューの効果</th>
             <td><input class="command-input" type="text" name="suspicious_stew_effects" value="" placeholder="未設定" onchange="makeCommand()"></td>
         </tr>
         <tr>
-            <th>ツールとしての設定（tool）</th>
+            <th>ツールとしての設定</th>
             <td><input class="command-input" type="text" name="tool" value="" placeholder="未設定" onchange="makeCommand()"></td>
         </tr>
         <tr>
-            <th>ツールチップの背景（tooltip_style）</th>
+            <th>ツールチップの背景</th>
             <td><input class="command-input" type="text" name="tooltip_style" value="" placeholder="未設定" onchange="makeCommand()"></td>
         </tr>
         <tr>
-            <th>クールダウン設定（use_cooldown）</th>
+            <th>クールダウン設定</th>
             <td><input class="command-input" type="text" name="use_cooldown" value="" placeholder="未設定" onchange="makeCommand()"></td>
         </tr>
         <tr>
-            <th>使用後のアイテム（use_remainder）</th>
+            <th>使用後のアイテム</th>
             <td><input class="command-input" type="text" name="use_remainder" value="" placeholder="未設定" onchange="makeCommand()"></td>
         </tr>
         <tr>
-            <th>武器としての設定（weapon）</th>
+            <th>武器としての設定</th>
             <td><input class="command-input" type="text" name="weapon" value="" placeholder="未設定" onchange="makeCommand()"></td>
         </tr>
         <tr>
-            <th>本と羽根ペンのデータ（writable_book_content）</th>
+            <th>本と羽根ペンのデータ</th>
             <td><input class="command-input" type="text" name="writable_book_content" value="" placeholder="未設定" onchange="makeCommand()"></td>
         </tr>
         <tr>
-            <th>記入済みの本のデータ（written_book_content）</th>
+            <th>記入済みの本のデータ</th>
             <td><input class="command-input" type="text" name="written_book_content" value="" placeholder="未設定" onchange="makeCommand()"></td>
         </tr>
     </table>
@@ -679,7 +679,6 @@ function makeCommand(){
     var component_container_loot = set_container_loot(form);
     var component_custom_model_data = set_custom_model_data(form);
     var component_debug_stick_state = set_debug_stick_state(form);
-
     var component_blocks_attacks = set_blocks_attacks(form);
     var component_damage_resistant = set_damage_resistant(form);
     var component_death_protection = set_death_protection(form);
@@ -762,7 +761,6 @@ function makeCommand(){
     if(component_debug_stick_state !== ''){
         components.push(component_debug_stick_state);
     }
-
     if(component_blocks_attacks !== ''){
         components.push(component_blocks_attacks);
     }
